[tool.poetry]
name = "dailylog"
version = "0.1.1"
description = ""
authors = ["Quien Sabe <qs5779@mail.com>"]
readme = "README.md"

# homepage = "https://github.com/wtfo-guru/wtforglib"
# documentation = "https://wtforglib.readthedocs.io/en/stable"

keywords = ["logging"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

packages = [
    { include = "dailylog" },
    { include = "dailylog/py.typed" },
]

[tool.poetry.scripts]
dailylog = "dailylog.cli:main"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
click = "^8.1.7"
loguru = "^0.7.2"
wtforglib = "^0.8.3"
tomli = "^2.0.1"


[tool.poetry.group.test.dependencies]
isort = "^5.12.0"
black = "^23.10.1"
mypy = "^1.6.1"
wemake-python-styleguide = "^0.18.0"
flake8-pytest-style = "^1.7.2"
doc8 = "^1.1.1"
safety = "^2.3.5"
pytest-cov = "^4.1.0"
pytest-click = "^1.1.0"
pytest-print = "^1.0.0"


[tool.poetry.group.tests.dependencies]
pyfakefs = "^5.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"
