[project]
name = "dailylog1"
description = ""
keywords = ["logging"]
version = "0.4.0-dev0"
dynamic = ["classifiers"]
readme = "README.md"
authors = [{name = "Quien Sabe", email = "qs5779@mail.com"}]
requires-python = '>=3.10,<4.0'
dependencies = [
  'click (>=8.1.0,<9.0.0)',
  'loguru (>=0.7.2,<0.8.0)',
  'wtforglib (>=1.0.0,<2.0.0)'
]

[project.urls]
homepage = "https://github.com/wtfo-guru/dailylog"
documentation = "https://dailylog.readthedocs.io/en/stable"

[project.scripts]
dailylog = "dailylog1.cli:main"

[tool.poetry]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

packages = [
    { include = "dailylog1" },
    { include = "dailylog1/py.typed" },
]
requires-poetry = '>=2.0'

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
isort = "^6.0"
black = "^25.0"
mypy = "^1.9"
wemake-python-styleguide = "^1.0.0"
flake8-pytest-style = ">=2.0,<3.0"
doc8 = "^1.1.1"
safety = ">=2.3.5,<4.0.0"
pytest = ">=7.4,<9.0"
pytest-cov = "^6.0.0"
pytest-click = "^1.1.0"
pytest-print = "^1.0.0"
pyfakefs = "^5.3.0"
# pip = "^24.0"
nitpick = "^0.35.0"
darglint = "^1.8.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.0,<9.0"
sphinx-autodoc-typehints = ">=1.24,<4.0"
sphinx-mdinclude = "^0.6.2"
tomli = "^2.0"

[build-system]
requires = ['poetry-core (>=2.0)']
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = "https://www.wtfo-guru.com/.well-known/nitpick-wtf-style.toml"
